--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.x'
+
+      - name: Create necessary directories
+        run: |
+          mkdir -p OUTPUT
 
       - name: Run all-in-one script
         run: |
